--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             <button class="button operator" onclick="calculateResult()">=</button>
             <button class="button operator" onclick="setOperator('+')">+</button>
 
+            <button class="button operator" onclick="convertToFahrenheit()">T</button>
             
         </div>
     </div>
