--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             <button class="button operator" onclick="setOperator('+')">+</button>
 
             <button class="button operator" onclick="convertToFahrenheit()">T</button>
+            <button class="button operator" onclick="convertirPeso()">P</button>
             
         </div>
     </div>
