--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
             <button class="button operator" onclick="convertToFahrenheit()">T</button>
             <button class="button operator" onclick="convertirPeso()">P</button>
+            <button class="button operator" onclick="convertirPresion()">PR</button>
             
         </div>
     </div>
