--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <button class="button operator" onclick="convertToFahrenheit()">T</button>
             <button class="button operator" onclick="convertirPeso()">P</button>
             <button class="button operator" onclick="convertirPresion()">PR</button>
-            
+            <button class="button operator" onclick="convertirMoneda()">M</button>
         </div>
     </div>
 
